# Track-It-Now-v1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  wait-for-db.sh  wait-for-redis.sh
app/: main.py  requirements.txt
app/api/: agents.py  delivery.py  parcels.py  track.py  users.py
app/core/: config.py  security.py
app/database/: db_creation.sql  redis_init.py  session.py
app/database/repository/: delivery_assignment.py  location.py  parcel_requests.py  parcels.py  trackingcode.py  users.py
app/schemas/: delivery.py  location.py  parcel_requests.py  parcels.py  tokens.py  trackingcode.py  users.py
app/services/: RBAC.py  agent.py  delivery_services.py  dependencies.py  livelocation.py  parcel_requests.py  parcels.py  users.py  websockets.py
